# serializer version: 1
# name: TestBuildImplementationGuidePromptSnapshot.test_allSections_returnsStablePrompt
  tuple(
    'You are a senior engineer writing executor-ready implementation guides.',
    '''
      ## Your ONE Job
      Produce an executor-ready implementation guide. Every path must be real or marked "(new)". Every test must have a complete assertion body. Every step must be verifiable.
      
      ## Required Sections (exactly 10, in order)
      1. Context  2. Pre-flight  3. Files  4. Implementation Steps  5. Tests
      6. Commit Plan  7. Verification  8. Rollback  9. Deviations Allowed  10. Out of Scope
      
      ## Hard Rules
      - NO absolute personal paths (`/Users/...`, `/home/...`, `C:\Users\...`). Use `{WORKSPACE}` or workspace-relative paths.
      - NO empty test bodies. Forbidden patterns: `/* ... */`, `it(name, () => {})`, `def test_x(): pass`. Match the repo's test framework with full assertions.
      - NO unfilled placeholders: `<placeholder>`, `<TBD>`, `TODO(executor)`, `path/to/whatever` — replace every bracket/brace token with a concrete value.
      - Your entire response MUST begin with `#`. No preamble. No `Now I have everything…`. No `Let me write the guide…`. No `Writing it now.`.
      - The `Co-Authored-By` commit trailer in the Commit Plan MUST be copied verbatim from the EXECUTOR ATTRIBUTION block. Never invent a model version.
      - Use relative test-count deltas (`N → N+K passing`), never absolute baselines (`192 → 216`).
      
      ## Output Gate
      Your output is checked by `modules.quality.lint.lint_task_guide()` before it is written to disk. The QUALITY GATES section below enumerates the rules. Errors return 502 and force regeneration; warnings ship with the file. Self-check against those rules before emitting.
      
      ## BUILDER CONTEXT
      I am a solo founder shipping fast.
      
      ## ARCHITECTURE PRINCIPLES
      Ship fast, validate first.
      
      ## CODEBASE CONTEXT
      modules/ai/prompts/__init__.py
      
      ## REFERENCE CODE
      # Reference
      Existing prompt functions.
      
      ## PRIOR-TASK CONTRACTS
      ### task-1-unify-context-services.md
      Context unified.
      
      ## EXECUTOR ATTRIBUTION
      Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>
      
      ---
      
      # Task 2: Migrate Prompts to Flask
      
      **Effort**: 1.5 days
      
      CONTEXT FROM EPIC:
      ### Task 2: Migrate Prompts to Flask
      Create PromptBuilder class.
      
      CONTEXT FROM ARCHITECTURE:
      ## Architecture Overview
      Builder pattern for prompts.
      
      Generate a concrete, executor-ready implementation guide for this task.
    ''',
  )
# ---
# name: TestBuildImplementationGuidePromptSnapshot.test_noOptionalContext_returnsStablePrompt
  tuple(
    'You are a senior engineer writing executor-ready implementation guides.',
    '''
      ## Your ONE Job
      Produce an executor-ready implementation guide. Every path must be real or marked "(new)". Every test must have a complete assertion body. Every step must be verifiable.
      
      ## Required Sections (exactly 10, in order)
      1. Context  2. Pre-flight  3. Files  4. Implementation Steps  5. Tests
      6. Commit Plan  7. Verification  8. Rollback  9. Deviations Allowed  10. Out of Scope
      
      ## Hard Rules
      - NO absolute personal paths (`/Users/...`, `/home/...`, `C:\Users\...`). Use `{WORKSPACE}` or workspace-relative paths.
      - NO empty test bodies. Forbidden patterns: `/* ... */`, `it(name, () => {})`, `def test_x(): pass`. Match the repo's test framework with full assertions.
      - NO unfilled placeholders: `<placeholder>`, `<TBD>`, `TODO(executor)`, `path/to/whatever` — replace every bracket/brace token with a concrete value.
      - Your entire response MUST begin with `#`. No preamble. No `Now I have everything…`. No `Let me write the guide…`. No `Writing it now.`.
      - The `Co-Authored-By` commit trailer in the Commit Plan MUST be copied verbatim from the EXECUTOR ATTRIBUTION block. Never invent a model version.
      - Use relative test-count deltas (`N → N+K passing`), never absolute baselines (`192 → 216`).
      
      ## Output Gate
      Your output is checked by `modules.quality.lint.lint_task_guide()` before it is written to disk. The QUALITY GATES section below enumerates the rules. Errors return 502 and force regeneration; warnings ship with the file. Self-check against those rules before emitting.
      
      ## EXECUTOR ATTRIBUTION
      Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>
      
      ---
      
      # Task 2: Migrate Prompts to Flask
      
      **Effort**: 1.5 days
      
      CONTEXT FROM EPIC:
      ### Task 2: Migrate Prompts to Flask
      Create PromptBuilder class.
      
      CONTEXT FROM ARCHITECTURE:
      ## Architecture Overview
      Builder pattern for prompts.
      
      Generate a concrete, executor-ready implementation guide for this task.
    ''',
  )
# ---
